Minor fixes
+ Added transaction in dispatching algorithm
+ Added verbose variable to print less cluttering stuff