@@ -12,6 +12,7 @@ import org.apache.logging.log4j.Logger;
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.net.Socket;
+import java.net.SocketException;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
@@ -23,6 +24,8 @@ import static ds.common.Message.MessageType.RES_REQ;
 import static ds.common.Utils.Strings.NULL;
 
 public class ReverseProxy implements LBMessageHandler {
+    private static final boolean verbose =
+            System.getenv().containsKey("VERBOSE") && Boolean.parseBoolean(System.getenv("VERBOSE"));
     private final int maxNumNodes = System.getenv().containsKey("MAX_NUM_NODES") ?
             Integer.parseInt(System.getenv("MAX_NUM_NODES")) : 5;
     private final int listeningPort;
@@ -195,22 +198,33 @@ public class ReverseProxy implements LBMessageHandler {
                             log.debug("All results are stored correctly.");
                             return;
                         case "10":
-                            log.debug("Sending result request to {}", nodeHandler);
+                            if (verbose) {
+                                log.debug("Sending result request to {}", nodeHandler);
+                            }
                             message = new Message<>(200, REQUEST_OF_RES, emptyResults);
                             break;
                         case "01":
-                            log.debug("Sending results to {}", nodeHandler);
+                            if (verbose) {
+                                log.debug("Sending results to {}", nodeHandler);
+                            }
                             message = new Message<>(200, RESULT, nodeResultsRequests);
                             break;
                         case "11":
-                            log.debug("Sending results and results request to {}", nodeHandler);
+                            if (verbose) {
+                                log.debug("Sending results and results request to {}", nodeHandler);
+                            }
                             Tuple2<List<Tuple2<String, String>>, List<String>> payloadPackage =
                                     new Tuple2<>(nodeResultsRequests, emptyResults);
                             message = new Message<>(200, RES_REQ, payloadPackage);
                             break;
                     }
 
-                    nodeHandler.write(message);
+                    try {
+                        nodeHandler.write(message);
+                    } catch (SocketException e) {
+                        log.warn("Removing {} from nodesInfo caused by disconnection.", nodeHandler);
+                        nodesInfo.remove(nodeHandler);
+                    }
                 });
             }
         };
@@ -242,8 +256,15 @@ public class ReverseProxy implements LBMessageHandler {
         Dispatcher.applyAlgorithmFunction(max, (max_value) -> {
             Job jobToDispatch;
             while (max_value > 0) {
-                jobToDispatch = this.globalJobDeque.removeFirst();
-                ((NodeHandler) list.get(0).item2).write(new Message<>(200, JOB, jobToDispatch));
+                jobToDispatch = this.globalJobDeque.getFirst();
+                try {
+                    ((NodeHandler) list.get(0).item2).write(new Message<>(200, JOB, jobToDispatch));
+                } catch (SocketException e) {
+                    log.error("A node disconnected while dispatching was in action, recovering...");
+                    return;
+                }
+                // TODO consider adding a dispatched job queue to save failed jobs
+                this.globalJobDeque.removeFirst();
                 list.get(0).item1 += 1;
                 list.sort(Comparator.comparingInt(o -> o.item1));
                 max_value--;
